feat: initialize rr6-lazy-overlay-demo with React, Vite, and routing
- Add package.json with dependencies for React, React Router, and Vite.
- Create about.json API file for local app info.
- Implement main application structure with lazy loading and overlay during navigation.
- Create routes for Home, About, Screen A, and Screen B with respective components and loaders.
- Add TypeScript configuration for the project.
- Set up Vite configuration for React.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,30 @@
+# OS/Editor
 .DS_Store
-/node_modules/
+Thumbs.db
+.vscode/
+.idea/
 
-# React Router
-/.react-router/
-/build/
+# Dependencies (all packages)
+node_modules/
+
+# Build outputs (root and subprojects like rr6-demo)
+build/
+dist/
+.vite/
+*.tsbuildinfo
+
+# React Router generated types/cache
+.react-router/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+pnpm-debug.log*
+bun-debug.log*
+*.log
+logs/
+
+# Environment files
+.env
+.env.*
+!.env.example
